Fix Test Assertion

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyUserCanClickSchools_OrganizationsPageLink</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyUserCanClickOnPrivacyPolicyLink</td>
 <td>&nbsp;</td></tr>
 <tr>
