--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="73819a">  <td>22/05/16 13:02:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsPageTest.setUp()[pri:0, instance:com.fbistech.testcases.ContactUsPageTest@42eca56e]">&gt;&gt;setUp</td> 
+<tr bgcolor="73819a">  <td>22/05/16 20:05:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsPageTest.setUp()[pri:0, instance:com.fbistech.testcases.ContactUsPageTest@42eca56e]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1738236591</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/05/16 13:02:45</td>   <td>23108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.ContactUsPageTest@42eca56e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/05/16 13:02:45</td>   <td>23104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsPageTest.verifyUserCanClickOnPrivacyPolicyLink()[pri:9, instance:com.fbistech.testcases.ContactUsPageTest@42eca56e]">verifyUserCanClickOnPrivacyPolicyLink</td> 
+<tr bgcolor="73819a">  <td>22/05/16 20:05:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsPageTest.setUp()[pri:0, instance:com.fbistech.testcases.ContactUsPageTest@42eca56e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1738236591</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/05/16 20:05:23</td>   <td>12946</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.ContactUsPageTest@42eca56e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1738236591</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/05/16 20:05:23</td>   <td>12946</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.ContactUsPageTest@42eca56e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1738236591</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/05/16 20:05:19</td>   <td>8936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsPageTest.verifyUserCanClickOnPrivacyPolicyLink()[pri:9, instance:com.fbistech.testcases.ContactUsPageTest@42eca56e]">verifyUserCanClickOnPrivacyPolicyLink</td> 
+  <td>main@1738236591</td>   <td></td> </tr>
+<tr bgcolor="73819a">  <td>22/05/16 20:05:00</td>   <td>-10116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsPageTest.verifyUserCanClickSchools_OrganizationsPageLink()[pri:1, instance:com.fbistech.testcases.ContactUsPageTest@42eca56e]">verifyUserCanClickSchools_OrganizationsPageLink</td> 
   <td>main@1738236591</td>   <td></td> </tr>
 </table>
