--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="73819a">  <td>22/05/19 21:37:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@42eca56e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1738236591</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/05/19 21:37:14</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCanLoginWith_ValideCredentials()[pri:2, instance:com.fbistech.testcases.LoginPageTest@42eca56e]">verifyUserCanLoginWith_ValideCredentials</td> 
-  <td>main@1738236591</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/05/19 21:37:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@42eca56e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1738236591</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/05/19 21:37:14</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@42eca56e]">&lt;&lt;tearDown</td> 
+<tr bgcolor="68a769">  <td>22/07/16 19:37:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserCanClickOnContactUsEmail()[pri:27, instance:com.fbistech.testcases.HomePageTest@569cfc36]">verifyUserCanClickOnContactUsEmail</td> 
+  <td>main@1237598030</td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>22/07/16 19:37:33</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.fbistech.testcases.HomePageTest@569cfc36]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/05/19 21:37:14</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCannotLoginWith_InvalideCredentials()[pri:3, instance:com.fbistech.testcases.LoginPageTest@42eca56e]">verifyUserCannotLoginWith_InvalideCredentials</td> 
-  <td>main@1738236591</td>   <td></td> </tr>
-<tr bgcolor="73819a">  <td>22/05/19 21:37:14</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@42eca56e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="68a769">  <td>22/07/16 19:37:10</td>   <td>-22423</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.fbistech.testcases.HomePageTest@569cfc36]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1237598030</td>   <td></td> </tr>
 </table>
