--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,112 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="68a769">  <td>22/07/16 19:37:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.fbistech.testcases.HomePageTest@569cfc36]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1237598030</td>   <td></td> </tr>
-<tr bgcolor="68a769">  <td>22/07/16 19:37:33</td>   <td>22430</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.fbistech.testcases.HomePageTest@569cfc36]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="68a769">  <td>22/07/16 19:37:32</td>   <td>22423</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserCanClickOnContactUsEmail()[pri:27, instance:com.fbistech.testcases.HomePageTest@569cfc36]">verifyUserCanClickOnContactUsEmail</td> 
-  <td>main@1237598030</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:07</td>   <td>9168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:00:43</td>   <td>-434698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitle()[pri:1, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyLoginPageTitle</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:05:07</td>   <td>-171074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCanClickForgotPasswordLink()[pri:11, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCanClickForgotPasswordLink</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:00:54</td>   <td>-424304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCanClickOnLoginLink()[pri:2, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCanClickOnLoginLink</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:08:02</td>   <td>4385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCanClickOnTermsAndConditionsLink()[pri:18, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCanClickOnTermsAndConditionsLink</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:01:11</td>   <td>-406818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCanLoginWith_ValideCredentials()[pri:3, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCanLoginWith_ValideCredentials</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:47</td>   <td>-10787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCanNavigateToTermsAndConditionsPage()[pri:17, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCanNavigateToTermsAndConditionsPage</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:05:47</td>   <td>-131090</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCanResetForgetPassword_WithValidEmail()[pri:13, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCanResetForgetPassword_WithValidEmail</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:05:24</td>   <td>-153788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCanTerminateForgotPasswordProcess()[pri:12, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCanTerminateForgotPasswordProcess</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:03:18</td>   <td>-279922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCannotLoginWith_EmailWithoutDomaName_AndValidPassword()[pri:7, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCannotLoginWith_EmailWithoutDomaName_AndValidPassword</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:03:46</td>   <td>-252373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCannotLoginWith_EmptyEmail_AndValidPassword()[pri:8, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCannotLoginWith_EmptyEmail_AndValidPassword</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:02:51</td>   <td>-307280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCannotLoginWith_InvalidEmail_ValidPassword()[pri:6, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCannotLoginWith_InvalidEmail_ValidPassword</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:01:56</td>   <td>-362086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCannotLoginWith_InvalideCredentials()[pri:4, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCannotLoginWith_InvalideCredentials</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:04:42</td>   <td>-195712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCannotLoginWith_PasswordLessThan6DigitsCharacters()[pri:10, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCannotLoginWith_PasswordLessThan6DigitsCharacters</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:04:14</td>   <td>-223839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCannotLoginWith_ValidEmail_EmptyPassword()[pri:9, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCannotLoginWith_ValidEmail_EmptyPassword</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:02:21</td>   <td>-337272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCannotLoginWith_ValidEmail_InvalidPassword()[pri:5, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCannotLoginWith_ValidEmail_InvalidPassword</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:06:56</td>   <td>-61824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCannotResetForgetPasswordWithEmailWithoutDomainName()[pri:15, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCannotResetForgetPasswordWithEmailWithoutDomainName</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:06:20</td>   <td>-98154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCannotResetForgetPasswordWithEmailWithoutServerHostName()[pri:14, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCannotResetForgetPasswordWithEmailWithoutServerHostName</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
+<tr bgcolor="62bd7d">  <td>22/11/26 22:07:15</td>   <td>-43373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserCannotResetForgetPasswordWithEmptyInputField()[pri:16, instance:com.fbistech.testcases.LoginPageTest@1937eaff]">verifyUserCannotResetForgetPasswordWithEmptyInputField</td> 
+  <td>main@1246238504</td>   <td></td> </tr>
 </table>
